objects/APTS_Stage_Note__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Body__c</fullName>
        <description>Body of the note.HTML and other markup, such as bolding, is not supported.</description>
        <label>Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <description>Error Description if any Validation Error is found during Validation</description>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <description>External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <description>Id of the Original Notes Record</description>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_OwnerId__c</fullName>
        <description>ID of the user who owns the note.</description>
        <label>OwnerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_ParentId__c</fullName>
        <description>This is the unique identifier for the particular type of Parent.</description>
        <label>ParentId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Type__c</fullName>
        <description>This field is not transferred to the Operational Object.  It is used by the Application to locate the correct Parent.</description>
        <label>Parent Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Private__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If not specified, the system will default to TRUE.</description>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <description>RowStatus of the record. For Ex: Initial Load, Validation Passed, Load Complete</description>
        <label>RowStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Title__c</fullName>
        <description>Title of the note.</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Stage Note</label>
    <nameField>
        <displayFormat>N-{0000}</displayFormat>
        <label>Stage Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>